[gd_scene load_steps=14 format=2]

[ext_resource path="res://addons/distance_field_studio/resources/shader_library/distance_field_library.tres" type="Resource" id=1]
[ext_resource path="res://addons/distance_field_studio/scripts/distance_field_editor/function_palette.gd" type="Script" id=4]
[ext_resource path="res://addons/distance_field_studio/scripts/distance_field_editor/camera_pitch.gd" type="Script" id=5]
[ext_resource path="res://addons/distance_field_studio/scripts/distance_field/distance_field_instance.gd" type="Script" id=6]
[ext_resource path="res://addons/distance_field_studio/scripts/distance_field_editor/distance_field_editor.gd" type="Script" id=7]
[ext_resource path="res://addons/distance_field_studio/scripts/distance_field_editor/camera_yaw.gd" type="Script" id=9]
[ext_resource path="res://addons/distance_field_studio/scripts/distance_field_editor/distance_field_graph.gd" type="Script" id=10]
[ext_resource path="res://addons/distance_field_studio/scripts/distance_field_editor/viewport_container.gd" type="Script" id=11]

[sub_resource type="ProceduralSky" id=1]

[sub_resource type="Environment" id=2]
background_mode = 3
background_sky = SubResource( 1 )
background_color = Color( 0.301961, 0.301961, 0.301961, 1 )

[sub_resource type="World" id=3]
environment = SubResource( 2 )

[sub_resource type="ShaderMaterial" id=4]

[sub_resource type="CubeMesh" id=5]
flip_faces = true
size = Vector3( 4, 4, 4 )

[node name="DistanceFieldEditor" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 500 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
shader_library = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="HBoxContainer"]
margin_right = 724.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="Distance Field Function" type="GraphEdit" parent="HBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
mouse_filter = 1
size_flags_horizontal = 3
right_disconnects = true
script = ExtResource( 10 )

[node name="Material Function" type="GraphEdit" parent="HBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
mouse_filter = 1
size_flags_horizontal = 3
right_disconnects = true
script = ExtResource( 10 )
target_resource = "material_function"
input_names = [ "Position", "Normal", "Tangent", "Binormal" ]
input_types = [ "vec3", "vec3", "vec3", "vec3" ]
input_glsl = [ "IN_POSITION", "IN_NORMAL", "IN_TANGENT", "IN_BINORMAL" ]
output_names = [ "Color", "Metallic", "Specular", "Roughness", "Emission", "Ambient Occlusion", "AO Light Affect" ]
output_types = [ "vec4", "float", "float", "float", "vec3", "float", "float" ]
output_properties = [ "color_function", "metallic_function", "specular_function", "roughness_function", "emission_function", "ao_function", "ao_light_affect_function" ]
output_glsl = [ "OUT_COLOR = %s;", "OUT_METALLIC = %s;", "OUT_SPECULAR = %s;", "OUT_ROUGHNESS = %s;", "OUT_EMISSION = %s;", "OUT_AO = %s;", "OUT_AO_LIGHT_AFFECT = %s;" ]

[node name="Shader Parameters" type="GraphEdit" parent="HBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
mouse_filter = 1
size_flags_horizontal = 3
right_disconnects = true
script = ExtResource( 10 )
target_resource = "shader_params"
input_names = [  ]
input_types = [  ]
input_glsl = [  ]
output_names = [ "Max Steps", "Over Relax Factor", "Anti-Alias Gradient", "Hollow", "Force Hit", "Draw Steps", "Continuity Iterations", "Continuity Threshold" ]
output_types = [ "int", "float", "float", "bool", "bool", "bool", "int", "float" ]

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 724.0
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ViewportContainer" type="ViewportContainer" parent="HBoxContainer/VBoxContainer/MarginContainer"]
margin_right = 300.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 300 )
script = ExtResource( 11 )

[node name="Viewport" type="Viewport" parent="HBoxContainer/VBoxContainer/MarginContainer/ViewportContainer"]
size = Vector2( 300, 300 )
own_world = true
world = SubResource( 3 )
handle_input_locally = false
render_target_update_mode = 3

[node name="DistanceFieldInstance" type="MeshInstance" parent="HBoxContainer/VBoxContainer/MarginContainer/ViewportContainer/Viewport"]
visible = false
material_override = SubResource( 4 )
mesh = SubResource( 5 )
material/0 = null
script = ExtResource( 6 )
billboard_size = Vector2( 4, 4 )
distance_field = null

[node name="CameraYaw" type="Spatial" parent="HBoxContainer/VBoxContainer/MarginContainer/ViewportContainer/Viewport"]
transform = Transform( 0.707107, 0, 0.707106, 0, 0.999999, 0, -0.707107, 0, 0.707106, 0, 0, 0 )
script = ExtResource( 9 )

[node name="CameraPitch" type="Spatial" parent="HBoxContainer/VBoxContainer/MarginContainer/ViewportContainer/Viewport/CameraYaw"]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866026, 0, 0, 0 )
script = ExtResource( 5 )

[node name="Camera" type="Camera" parent="HBoxContainer/VBoxContainer/MarginContainer/ViewportContainer/Viewport/CameraYaw/CameraPitch"]
transform = Transform( 1, 0, 0, 0, 1, -6.55651e-07, 0, 0, 1, 0, 0, 4 )
visible = false
keep_aspect = 0

[node name="FunctionPalette" type="ScrollContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 300.0
margin_right = 300.0
margin_bottom = 600.0
size_flags_vertical = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/FunctionPalette"]
margin_right = 288.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
[connection signal="mouse_entered" from="HBoxContainer/TabContainer" to="HBoxContainer/VBoxContainer/FunctionPalette" method="hide_popup_menus"]
[connection signal="gui_input" from="HBoxContainer/VBoxContainer/MarginContainer/ViewportContainer" to="HBoxContainer/VBoxContainer/MarginContainer/ViewportContainer/Viewport/CameraYaw" method="viewport_input"]
[connection signal="gui_input" from="HBoxContainer/VBoxContainer/MarginContainer/ViewportContainer" to="HBoxContainer/VBoxContainer/MarginContainer/ViewportContainer/Viewport/CameraYaw/CameraPitch" method="viewport_input"]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/MarginContainer/ViewportContainer" to="HBoxContainer/VBoxContainer/FunctionPalette" method="hide_popup_menus"]
